--- a/package.json
+++ b/package.json
@@ -9,9 +9,29 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "devDependencies": {
+    "@nuxt/devtools": "^1.0.8",
+    "@nuxt/image": "^1.3.0",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/i18n": "8.0.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.11.10",
+    "@vite-pwa/nuxt": "^0.4.0",
+    "dayjs-nuxt": "^2.1.9",
+    "eslint": "^8.57.0",
+    "nuxt": "^3.9.3",
+    "nuxt-icon": "^0.6.8",
+    "nuxt-schema-org": "^3.3.3",
+    "nuxt-typed-router": "^3.5.1",
+    "prettier": "^3.2.5",
+    "sass": "^1.70.0",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
+  },
   "dependencies": {
-    "nuxt": "^3.11.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "js-cookie": "^3.0.5"
   }
 }
