--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["acgngame", "Nuxt", "persistedstate", "pinia"]
+  "cSpell.words": ["acgngame", "lucide", "Nuxt", "persistedstate", "pinia"]
 }
