chore: update all dependencies

--- a/package.json
+++ b/package.json
@@ -10,27 +10,26 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.1.4",
-    "@nuxt/image": "^1.4.0",
-    "@nuxtjs/color-mode": "^3.3.3",
+    "@nuxt/devtools": "^1.6.0",
+    "@nuxt/image": "^1.8.1",
+    "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "8.2.0",
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
-    "@pinia/nuxt": "^0.5.1",
+    "@nuxtjs/i18n": "8.5.5",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
+    "@pinia/nuxt": "^0.5.5",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.11.30",
-    "@vite-pwa/nuxt": "^0.6.0",
-    "dayjs": "^1.11.10",
-    "dayjs-nuxt": "^2.1.9",
-    "eslint": "^8.57.0",
-    "nuxt": "^3.11.1",
-    "nuxt-icon": "^0.6.10",
-    "nuxt-schema-org": "^3.3.6",
-    "nuxt-typed-router": "^3.6.1",
-    "prettier": "^3.2.5",
-    "sass": "^1.72.0",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "@types/node": "^22.7.5",
+    "@vite-pwa/nuxt": "^0.10.5",
+    "dayjs": "^1.11.13",
+    "dayjs-nuxt": "^2.1.11",
+    "eslint": "^9.12.0",
+    "nuxt": "^3.13.2",
+    "nuxt-icon": "1.0.0-beta.7",
+    "nuxt-schema-org": "^3.4.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.79.5",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "dependencies": {
     "js-cookie": "^3.0.5"
