--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.6.0",
+    "@nuxt/icon": "^1.5.6",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
@@ -24,7 +25,6 @@
     "dayjs-nuxt": "^2.1.11",
     "eslint": "^9.12.0",
     "nuxt": "^3.13.2",
-    "nuxt-icon": "1.0.0-beta.7",
     "nuxt-schema-org": "^3.4.0",
     "prettier": "^3.3.3",
     "sass": "^1.79.5",
