--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/i18n": "8.5.5",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.5",
+    "@prisma/client": "^5.20.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.7.5",
     "@vite-pwa/nuxt": "^0.10.5",
@@ -32,6 +33,7 @@
     "vue-router": "^4.4.5"
   },
   "dependencies": {
-    "js-cookie": "^3.0.5"
+    "js-cookie": "^3.0.5",
+    "unstorage": "^1.12.0"
   }
 }
